# tidy-app

./: .codacy.yml  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  knip.config.ts  package.json  pnpm-lock.yaml  turbo.json  vitest.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  (+2 more)
.husky/: pre-commit  pre-push
apps/gui/src-tauri/: Cargo.toml  tauri.conf.json
apps/gui/src-tauri/bindings/: BatchRenameSummary.ts  CaseStyle.ts  FileConflict.ts  FileRenameResult.ts  GeneratePreviewOptions.ts  HistoryStore.ts  PreviewActionSummary.ts  PreviewSummary.ts  RenamePreview.ts  RenameStatus.ts  ReorganizationMode.ts  SanitizeChange.ts  ScanOptions.ts  ScanResult.ts  UndoResult.ts  index.ts
apps/gui/src-tauri/bindings/bindings/: BatchRenameResult.ts  ErrorCategory.ts  ErrorResponse.ts  ExecuteRenameOptions.ts  ExportFormat.ts  FileActionType.ts  FileCategory.ts  FileHistoryRecord.ts  FileInfo.ts  GeneratePreviewOptions.ts  MetadataCapability.ts  OperationHistoryEntry.ts  OperationSummary.ts  OperationType.ts  OrganizeOptions.ts  RenameIssue.ts  RenameOutcome.ts  RenameProposal.ts  SanitizeResult.ts  ScanPhase.ts  ScanProgress.ts  ScanResult.ts  SkipReason.ts  SkippedFile.ts
apps/gui/src-tauri/capabilities/: default.json
apps/gui/src-tauri/icons/: icon.icns
apps/gui/src-tauri/src/: lib.rs  main.rs
apps/gui/src-tauri/src/commands/: config.rs  error.rs  export.rs  history.rs  llm.rs  mod.rs  rename.rs  scanner.rs  secrets.rs  security.rs  version.rs
docs/: RELEASING.md
scripts/: bump-version.ts  validate-types.ts
(+135 files in other folders)
