[package]
name = "tidy-app"
version = "0.2.0"
description = "Intelligent file organization tool"
authors = ["tidy-app"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tidy_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
window-vibrancy = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
regex-lite = "0.1"
tokio = { version = "1", features = ["sync"] }
fs2 = "0.4"
parking_lot = "0.12"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
aes-gcm = "0.10"
sha2 = "0.10"
machine-uid = "0.5"
lazy_static = "1"
ts-rs = { version = "10", features = ["chrono-impl", "serde-json-impl"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros", "sync"] }
